--- a/src/blocks/components/tab-feature/tab-feature.scss
+++ b/src/blocks/components/tab-feature/tab-feature.scss
@@ -1,43 +1,278 @@
 .tab-feature {
-    margin-top: 40px;
-    &__nav {
-      display: flex;
-        justify-content: space-between;
-        align-items: center;
+  margin-top: 27px;
+
+  @include md-block {
+    margin-bottom: 24px;
+  }
+
+  &__wrap {
+    padding-bottom: 80px;
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: -10px;
+    margin-right: -10px;
+
+    @include xl-block {
+      flex-wrap: wrap;
+      margin-bottom: -20px;
+      justify-content: flex-start;
+    }
+  }
+
+  &__link {
+    max-width: 197px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    min-height: 74px;
+    padding: 17px 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+    text-decoration: none;
+    background: rgba(145, 145, 145, 0.2);
+    border-radius: 12px;
+    box-sizing: border-box;
+    @include transition();
+
+    @include xl-block {
+      margin-bottom: 20px;
     }
 
-    &__link {
-        display: flex;
-        width: 100%;
-        padding: 25px 30px;
-        margin-right: 20px;
-        text-decoration: none;
-        background: rgba(145, 145, 145, 0.2);
-        border-radius: 12px;
-
-        &:last-child {
-            margin-right: 0;
-        }
+    @include md-block {
+      width: #{'calc(33% - 20px)'};
+      max-width: inherit;
     }
 
-& span  {
+    @include sm-block {
+      padding: 14px 20px;
+      width: #{'calc(50% - 20px)'};
+    }
+
+    @include xs-block {
+      width: 100%;
+      margin-bottom: 16px;
+    }
+
+    &:hover {
+      background: #FFD223;
+    }
+  }
+
+  &__text {
+    width: #{'calc(100% - 27px)'};
     display: inline-block;
     margin-left: 10px;
     font-weight: normal;
     font-size: 15px;
     line-height: 20px;
-    color: #000000;
+    color: #000;
     text-align: center;
-}
 
-&__img {
-    width: 100%;
-    width: 24px;
-    height: 24px;
+    @include sm-block {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
 
+  &__img {
+    width: 27px;
+    height: 27px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
     & img {
+      max-width: 100%;
+      max-height: 100%;
     }
-}
+  }
 
+  &__tag {
+    display: inline-block;
+    padding: 4px 17px;
+    background: rgba(255, 210, 35, .5);
+    border-radius: 6px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #333333;
+    text-decoration: none;
+    margin-right: 8px;
+    margin-bottom: 8px;
+
+    &-list {
+      margin-bottom: 32px;
+      @include md-block {
+        margin-bottom: 24px;
+      }
+    }
+  }
+
+  &-block {
+    margin-top: 40px;
+
+    @include md-block {
+      margin-top: 24px;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 42px;
+      color: #16162D;
+      margin-bottom: 24px;
+
+      @include md-block {
+        font-size: 24px;
+        line-height: 32px;
+        margin-bottom: 16px;
+      }
+    }
+
+    &__content {
+      background: #fff;
+      @include inner-content();
+    }
+  }
+
+  &-item {
+    margin-bottom: 40px;
+    @include md-block {
+      margin-bottom: 24px;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 32px;
+      color: #000;
+      margin-bottom: 16px;
+
+      @include md-block {
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 12px;
+      }
+    }
+
+    &__content {
+      padding-left: 16px;
+      @include sm-block {
+        padding-left: 0;
+      }
+    }
+  }
+
+  &-value {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 16px;
+    @include md-block {
+      margin-bottom: 8px;
+    }
+    @include sm-block {
+      flex-direction: column;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 32px;
+      color: #919191;
+      max-width: 310px;
+      width: 100%;
+      position: relative;
+      margin-right: 5px;
+      z-index: 0;
+      @include lg-block {
+        width: 50%;
+      }
+      @include md-block {
+        font-size: 16px;
+        line-height: 28px;
+      }
+
+      @include sm-block {
+        width: 100%;
+        &:before {
+          content: none;
+        }
+      }
+
+
+      & span {
+        text-align: left;
+        background: #fff;
+      }
+
+      &:before {
+        content: '';
+        position: absolute;
+        bottom: 7px;
+        width: 100%;
+        border-bottom: 1px dotted #919191;
+        z-index: -1;
+      }
+    }
+
+    &__content {
+      font-size: 18px;
+      line-height: 32px;
+      color: #333333;
+      @extend .text;
+      margin: 0;
+      padding: inherit;
+      max-width: 100%;
+      align-self: flex-end;
+
+      @include lg-block {
+        width: 50%;
+      }
+
+      @include md-block {
+        margin: 0;
+        padding: inherit;
+        max-width: 100%;
+        font-size: 16px;
+        line-height: 28px;
+      }
+
+      @include sm-block {
+        width: 100%;
+      }
+
+      & p {
+        margin-bottom: 0;
+        @include md-block {
+          font-size: 16px;
+          line-height: 28px;
+        }
+      }
+
+      & p ~ p {
+        margin-top: 16px;
+      }
+
+      & ul {
+        margin-top: 21px;
+        margin-bottom: 0;
+        @include md-block {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
 }
