--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "libs";
 @import "fontawesome/fontawesome";
 @import "fontawesome/brands";
+@import "helpers/icons";
 @import "helpers/mixins";
 @import "helpers/validator";
 @import "helpers/ui-kit";
