--- a/src/blocks/components/tab-feature/tab-feature.scss
+++ b/src/blocks/components/tab-feature/tab-feature.scss
@@ -21,6 +21,10 @@
       margin-bottom: -20px;
       justify-content: flex-start;
     }
+
+    @include md-block {
+      display: none;
+    }
   }
 
   &__link {
@@ -117,7 +121,16 @@
     margin-top: 40px;
 
     @include md-block {
-      margin-top: 24px;
+      margin-top: 4px;
+      background: #fff;
+    }
+
+    &__icon {
+      margin-right: 16px;
+      display: none;
+      @include md-block {
+        display: block;
+      }
     }
 
     &__title {
@@ -126,17 +139,46 @@
       line-height: 42px;
       color: #16162D;
       margin-bottom: 24px;
+      display: flex;
+      align-items: center;
 
       @include md-block {
         font-size: 24px;
         line-height: 32px;
-        margin-bottom: 16px;
+        margin-bottom: 0;
+        padding: 12px 34px 12px 12px;
+        position: relative;
+
+        &:after {
+          content: '';
+          position: absolute;
+          right: 12px;
+          top: 0;
+          bottom: 0;
+          left: auto;
+          margin: auto;
+          width: 0;
+          height: 0;
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-top: 6px solid #919191;
+        }
+
+        &.active {
+          &:after {
+            @include rotate();
+          }
+        }
       }
     }
 
     &__content {
       background: #fff;
       @include inner-content();
+
+      @include md-block {
+        display: none;
+      }
     }
   }
 
