--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -5,6 +5,10 @@
   display: inline-block;
   text-decoration: none;
 
+  &[data-ajax-tab] {
+    cursor: pointer;
+  }
+
   &__remove {
     position: absolute;
     top: 0;
