--- a/src/blocks/components/filter-search/_filter-search.scss
+++ b/src/blocks/components/filter-search/_filter-search.scss
@@ -88,6 +88,7 @@
 
   &__item {
     width: #{calc(100% / 3 - 10px)};
+    margin: 5px;
     @include sm-block {
       margin-bottom: 10px;
       width: 100%;
@@ -101,8 +102,10 @@
       display: flex;
       max-width: 812px;
       width: 100%;
-      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: -5px;
       @include sm-block {
+        margin: 0;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
