--- a/src/blocks/components/ledger/ledger.pug
+++ b/src/blocks/components/ledger/ledger.pug
@@ -46,7 +46,7 @@ form.ledger__form
     .ledger__form-row
         .ledger__form-inner
             .ledger__date
-                input(type='text', placeholder='15 окт 2018')
+                input(type='date', placeholder='15 окт 2018')
             .ledger__length
                 input(type='text', placeholder='20 000 км')
             .ledger__select
@@ -54,7 +54,7 @@ form.ledger__form
             .ledger__text
                 input(type='text', placeholder='Замена после покупки авто')
             .ledger__date
-                input(type='text', placeholder='15 окт 2019')
+                input(type='date', placeholder='15 окт 2019')
             .ledger__remove
                 a(href='javascript:void(0)').remove Удалить
         a(href='javascript:void(0)').button-add Добавить
