Fix article detail page from img to background image

--- a/src/blocks/components/article-detail/_article-detail.scss
+++ b/src/blocks/components/article-detail/_article-detail.scss
@@ -37,6 +37,10 @@
 }
 
 .article-img {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 434px;
     width: 100%;
 }
 
