--- a/src/blocks/components/article-detail/article-detail.pug
+++ b/src/blocks/components/article-detail/article-detail.pug
@@ -4,7 +4,7 @@ include ../../components/share/share
 
 section.article-detail
     .container
-        img.articles-img(src="img/articles.jpg", alt="")
+        .article-img(style="background-image: url(img/articles.jpg)")
         .article-content
             p
                 |Замена тормозной жидкости — обязательная процедура, целью которой является обеспечение
@@ -82,7 +82,7 @@ section.article-detail
                 |диагональная схема). Очень желательно для этого все же загнать машину на
                 |смотровую яму с тем, чтобы у вас был нормальный доступ к цилиндрам.
 
-            //img(src="img/articles-auto1.jpg", alt="")
+            img(src="img/articles-auto1.jpg", alt="")
 
             p Второй метод замены, параллельный подразумевает выполнение следующих действий:
             ul
